fix: bottom-sheet-screen position fixed in case of content overflow

--- a/src/components/bottom-sheet-screen/bottom-sheet-screen.css
+++ b/src/components/bottom-sheet-screen/bottom-sheet-screen.css
@@ -1,10 +1,14 @@
 :host {
     display: block;
-    position: absolute;
+
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+
+    width: 100%;
+    height: 100%;
 
     z-index: calc(var(--sheet-z-index, 9) - 1);
     background-color: var(--sheet-screen-background, rgba(0,0,0,0.4));
